--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ date_formats:
   tag: "YYYY/MM/DD"
 
 # Extensions
-Plugins:
+plugins:
   hexo-generator-feed
   hexo-generator-sitemap
   hexo-generator-baidu-sitemap
